argo-cd/clusters/lgsk8sp1/tooling/argo-workflows/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argo-workflow
  namespace: argo-workflow
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - 'argo-workflow.diegoluisi.eti.br'
